# forgeide-plugin-sdk

./: CLA.md  LICENSE  README.md
.github/workflows/: cla.yml
examples/hello-rust/: Cargo.toml  forgeide-plugin.json
examples/hello-rust/src/: lib.rs
rust-sdk/: Cargo.toml
rust-sdk/src/: host.rs  lib.rs  prelude.rs  types.rs
schema/: forgeide-plugin.schema.json
