[package]
name = "forgeide-plugin"
version = "0.1.0"
edition = "2021"
description = "SDK for building ForgeIDE plugins"
license = "Apache-2.0"
repository = "https://github.com/OTGStudio/forgeide-plugin-sdk"
documentation = "https://docs.forgeide.com/plugin-sdk"
keywords = ["forgeide", "plugin", "wasm", "gamedev"]
categories = ["game-development", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
